--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="w-full h-max relative my-5 mt-10">
             <div>
                 <input type="search" name="search" id="search"
-                    class="w-full p-2 text-white bg-transparent border-2 border-white focus:outline-none rounded-md placeholder:text-white/80 capitalize"
+                    class="w-full p-2 pr-8 text-white bg-transparent border-2 border-white focus:outline-none rounded-md placeholder:text-white/80 capitalize"
                     placeholder="gratis biaya admin...">
                 <button class="absolute right-2 top-1/4 animate-pulse"><i data-feather="search"
                         class="text-white"></i></button>
@@ -82,7 +82,7 @@
     <main class="container p-5 mx-auto my-10 mb-14">
         <div class="w-full h-auto grid grid-cols-4 gap-4">
             <div>
-                <a href="#" class="w-full flex flex-col items-center gap-2">
+                <a href="./public/pages/semua/index.html" class="w-full flex flex-col items-center gap-2">
                     <ion-icon class="w-[30px] h-[30px] text-sky-600 font-bold" name="grid-outline"></ion-icon>
                     <span class="text-sm font-quicksand capitalize text-gray-500">semua</span>
                 </a>
