--- a/public/pages/beli-pulsa/index.html
+++ b/public/pages/beli-pulsa/index.html
@@ -13,7 +13,7 @@
 
 <body class="w-full h-auto">
     <header class="w-full p-5 border-b flex items-center gap-3">
-        <a href="/index.html">
+        <a href="../../../index.html">
             <ion-icon name="arrow-back-outline" class="text-xl"></ion-icon>
         </a>
         <h1 class="capitalize text-lg font-quicksand font-medium">top up pulsa</h1>
